{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Gameplay",
            "id": "9fcaf24d-fb1c-40eb-b732-4c71ee447afc",
            "actions": [
                {
                    "name": "MouseLeftClick",
                    "type": "Button",
                    "id": "fc99951c-77f6-4ed5-9484-0d5e34cbaeef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseRightClick",
                    "type": "Button",
                    "id": "6782dd11-deeb-416f-b6e6-d53f01a6213d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "e86aab97-8972-43ad-a4db-9eb3b272d60b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "50edb656-9f2f-44df-b59e-164ffd0daed9",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "72a06765-71ed-4b00-af8a-9723090dea7f",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseRightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9b387c09-8ef9-4c8f-824b-b6dc69c7e7c9",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}